# tarmacview-field-hub

./: .env.docker.example  .gitignore  CLAUDE.md  INSTALL.md  NOTICE  README.md  docker-compose.yml  harness.config.json
.github/workflows/: ci.yml  claude-assistant.yml  (+11 more)
docs/: INTEGRATION-ROADMAP.md  ROADMAP.md  emulator-validation.md
emulator/: .env.emulator.example  README.md  docker-compose.emulator.yml  nginx.conf  seed-wayline.sh
fieldhub/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
fieldhub/app/: __init__.py  main.py
fieldhub/app/api/routes/: health.py  internal.py  manage.py  media.py  pilot.py  storage.py  wayline.py
fieldhub/app/core/: CLAUDE.md  config.py  db.py  exceptions.py  security.py
fieldhub/app/models/: __init__.py  device.py  media_file.py  wayline.py
fieldhub/app/schemas/: CLAUDE.md  envelope.py  health.py  internal.py  manage.py  media.py  pilot.py  storage.py  wayline.py
fieldhub/app/services/: CLAUDE.md  device_registry.py  health_service.py  media_service.py  mqtt_listener.py  object_store.py  storage_service.py  wayline_library.py
fieldhub/app/static/: index.html  pilot-connect.js
fieldhub/tests/: conftest.py  test_config.py  test_field_scripts.py  test_healthz.py  test_internal_status.py  test_manage_api.py  test_media_return_e2e.py  test_media_upload.py  test_mqtt_status.py  test_object_store.py  test_pilot_page.py  test_storage_sts.py  test_wayline_api.py  test_wayline_sanitize.py
fieldhub/tests/data/: __init__.py  media_payloads.py  mqtt_messages.py  pilot_connect_driver.js  wayline_samples.py
(+7 files in other folders)
