[project]
name = "tarmacview-fieldhub"
version = "0.1.0"
description = "Field Hub - local DJI Cloud API gateway for TarmacView"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
